--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">News17</string>
+    <string name="cover">cover</string>
+    <string name="sport">Sport</string>
+    <string name="technology">Technology</string>
 </resources>
